qq warnings